# pynxtools-em

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  MANIFEST.in  README.md  commit_fast.sh  contact.html  cspell.json  debug.eln.nxs  dev-requirements.txt  eln.batch.sh  hfive.batch.sh  imgs.batch.sh  index.html  mkdocs.yaml  nexus_concept_resolving.ipynb  nomad_plugin_metadata.yaml  pyproject.toml  rsciio_velox.batch.sh  rsciio_velox.ipynb  spiecker.batch.sh  spiecker.dev.ipynb
.cspell/: custom-dictionary.txt
.github/workflows/: build_docs.yml  cff-validation.yml  compatibility-with-pynxtools-release.yml  compatibility_with_pynxtools_release.yaml  cruft-update.yml  cruft_update.yml  nomad-requirements.yml  nomad_requirements.yml  publish.yml  pylint.yml  pytest.yml  spellcheck.yaml  spellcheck.yml
.metadata/: nomad_plugin_metadata.auto.yaml  nomad_plugin_metadata.manual.yaml
dev/: cspell_find_unknown_words.ipynb  eln.batch.sh  imgs.batch.sh  nexus_concept_resolving.ipynb  oasis_assessment.ipynb  rsciio_velox.batch.sh  rsciio_velox.ipynb  test_vars.ipynb  testing_concept_mapping.ipynb
docs/: contact.md  index.md
docs/explanation/: implementation.md  learn.md
docs/explanation/media/: workflow.mermaid
docs/how-tos/: examples.md  kikuchi.md  mtex.md  pyxem.md
docs/learn/: emapp.md  implementation.md  learn.md
docs/reference/: contextualization.md  conventions.md  eln_and_cfg.md  gatan.md  hfive_apex.md  mapping.md  nion.md  nxs_nion.md  png.md  png_axon.md  png_point.md  rsciio_gatan.md  rsciio_mrc.md  rsciio_velox.md  tiff.md  tiff_fei.md  tiff_hitachi.md  tiff_jeol.md  tiff_point.md  tiff_tescan.md  tiff_tfs.md  tiff_zeiss.md  velox.md  vemd.md  zip_png_axon.md
docs/tutorial/: contributing.md  examples.md  installation.md  oasis.md  standalone.md
examples/: HowToUseTutorial.ipynb  README.md  eln_data.yaml  em.conventions.schema.archive.yaml  em.conventions.yaml  em.oasis.specific.yaml  nxem.conventions.schema.archive.yaml  nxem.schema.archive.yaml
examples/deu_erlangen_spiecker/: cenem.nxs_eln_data.yaml
examples/ger_berlin_koch/: ger_berlin_koch_batch_metadata_mapping_lab.ipynb  ger_berlin_koch_batch_process.py
examples/usa_evanston_yan/: nexus_em_ebsd_patterns.py  nexus_em_ebsd_patterns_metadata.yaml
explanation/: emapp.html  implementation.html  learn.html
how-tos/: examples.html  howto.html  kikuchi.html  mtex.html  pyxem.html
learn/: emapp.html  implementation.html  learn.html  versioning.html
pynxtools_em/: reader.py
pynxtools_em/concepts/: concept_mapper.py  mapping_functors.py  nxs_concepts.py  nxs_em_eds_indexing.py  nxs_image_r_set.py  nxs_object.py  nxs_spectrum_set.py
pynxtools_em/config/: README.md  conventions_cfg.py  eln_cfg.py  em_example_eln_to_nx_map.py  em_oasis_cfg_to_nx_map.py  image_png_protochips_cfg.py  image_tiff_tfs_cfg.py  oasis_cfg.py  rsciio_velox_cfg.py
pynxtools_em/examples/: README.md  ebsd_database.py
pynxtools_em/geometry/: convention_mapper.py  euler_angle_convention.py  geometry.py  handed_cartesian.py  msmse_convention.py
pynxtools_em/shared/: mapping_functors.py  shared_utils.py
pynxtools_em/subparsers/: convention_reader.py  eln_reader.py  hfive_apex.py  hfive_base.py  hfive_bruker.py  hfive_concept.py  hfive_dreamthreed.py  hfive_ebsd.py  hfive_edax.py  hfive_emsoft.py  hfive_oxford.py  image_png_protochips.py  image_png_protochips_cfg.py  image_png_protochips_concepts.py  image_png_protochips_modifier.py  image_tiff.py  image_tiff_tfs.py  image_tiff_tfs_cfg.py  image_tiff_tfs_concepts.py  image_tiff_tfs_modifier.py  nxs_imgs.py  nxs_mtex.py  nxs_nion.py  nxs_pyxem.py  oasis_config_reader.py  oasis_eln_reader.py  rsciio_bruker.py  rsciio_velox.py  rsciio_velox_concepts.py
pynxtools_em/utils/: em_define_io_cases.py  get_file_checksum.py  get_gitrepo_commit.py  get_scan_points.py  get_sqr_grid.py  hfive_utils.py  image_processing.py  image_utils.py  interpret_boolean.py  io_case_logic.py  nion_utils.py  nx_atom_types.py  nx_default_plots.py  rsciio_hyperspy_utils.py  string_conversions.py  versioning.py  xml_utils.py
reference/: apex.html  contextualization.html  conventions.html  eln_and_cfg.html  hfive_apex.html  mapping.html  nion.html  nxs_nion.html  png.html  rsciio_gatan.html  rsciio_mrc.html  rsciio_velox.html  tiff.html  tiff_fei.html  tiff_hitachi.html  tiff_jeol.html  tiff_point.html  tiff_tescan.html  tiff_tfs.html  tiff_zeiss.html  vemd.html  zip_png_axon.html
scripts/: generate_custom_dict.sh  generate_reference_files.sh
search/: search_index.json
src/pynxtools_em/: README.md  __init__.py  reader.py
src/pynxtools_em/concepts/: hfive_concepts.py  mapping_functors_pint.py  nxs_concepts.py  nxs_em_eds_indexing.py  nxs_image_set.py  nxs_object.py  nxs_spectrum_set.py
src/pynxtools_em/configurations/: README.md  conventions_cfg.py  eln_cfg.py  gatan_cfg.py  ger_berlin_koch_group_cfg.py  image_png_protochips_cfg.py  image_tiff_fei_cfg.py  image_tiff_hitachi_cfg.py  image_tiff_jeol_cfg.py  image_tiff_point_electronic_cfg.py  image_tiff_tescan_cfg.py  image_tiff_tfs_cfg.py  image_tiff_zeiss_cfg.py  nion_cfg.py  oasis_cfg.py  oasis_eln_cfg.py  oasis_eln_config_cfg.py  rsciio_gatan_cfg.py  rsciio_velox_cfg.py
src/pynxtools_em/examples/: custom_reference_frame.py  diffraction_pattern_set.py  ebsd_database.py  ebsd_database_eln.py  ebsd_database_eln_cfg.py  ger_berlin_koch_cfg.py  ger_berlin_koch_eln.py  usa_evanston_yan_ebsd_patterns.py  usa_evanston_yan_ebsd_patterns.yaml
src/pynxtools_em/geometries/: README.md  handed_cartesian.py
src/pynxtools_em/geometry/: euler_angle_convention.py
src/pynxtools_em/methods/: README.md  ebsd.py  eds.py  microstructure.py
tests/: improve_schema_compliance.ipynb  run_tests.ipynb  test_hashing.ipynb  test_nomad_apps.py  test_nomad_examples.py  test_reader.py  test_utils_versioning.py  visualize_h5web.ipynb
tests/data/: run_tests.ipynb
tests/nomad/: test_nomad_apps.py  test_nomad_example_uploads.py
tutorial/: contributing.html  examples.html  installation.html  nexusio.html  oasis.html  standalone.html
(+144 files in other folders)
