[build-system]
requires = ["setuptools>=78.1.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pynxtools-em"
dynamic = ["version"]
authors = [
    { name = "The NOMAD Authors" },
]
description = "A reader for transferring EM from vendor formats to NeXus and NOMAD."
readme = "README.md"
license= { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pynxtools>=0.12.0",
    "hyperspy>=1.7.6",
    "rosettasciio",
    "kikuchipy",
    "pyxem",
    "nionswift",
    "flatdict",
    "xmltodict",
    "xraydb",
    "tzlocal"
]


[project.optional-dependencies]
dev = [
    "mypy",
    "ruff>=0.12.0",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "structlog",
    "types-pyyaml",
    "types-pytz",
    "types-requests",
    "uv",
    "pre-commit"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-macros-plugin",
    "pymdown-extensions",
    "mkdocs-click"
]
ipynb = [
    "jupyter",
    "jupyterlab",
    "jupyterlab_h5web"
]

[project.urls]
"Homepage" = "https://github.com/FAIRmat-NFDI/pynxtools-em"
"Bug Tracker" = "https://github.com/FAIRmat-NFDI/pynxtools-em/issues"

[project.entry-points."pynxtools.reader"]
em = "pynxtools_em.reader:EMReader"

[project.entry-points.'nomad.plugin']
em_example = "pynxtools_em.nomad.entrypoints:em_example"
# em_app = "pynxtools_em.nomad.entrypoints:em_app"

[tool.setuptools.packages.find]
where = [
    "src",
]
exclude = ["dev/*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
write_to = "_version.py"
git_describe_command = ["git", "describe", "--dirty", "--long", "--tags", "--match", "*[0-9]*", "--abbrev=8"]

[tool.ruff]
include = ["src/*.py", "tests/*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
    "NPY201", # upgrade to numpy>2
]
ignore = [
    "E501", # Line too long ({width} > {limit} characters)
    "E701", # Multiple statements on one line (colon)
    "E731", # Do not assign a lambda expression, use a def
    "E402",  # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLW0603", # Using the global statement
    "PLW2901", # redefined-loop-name
    "PLR1714", # consider-using-in
    "PLR5501", # else-if-used
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = false
ignore_missing_imports = true
follow_imports = "silent"
no_strict_optional = true
disable_error_code = "import, annotation-unchecked"
